feat[ReportServiceImpl] Реализованы дополнительные функции класса, кроме самой генерации отчета(там пока заглушка)